[gd_scene load_steps=12 format=3 uid="uid://c04vi3vcgfk46"]

[ext_resource type="Script" path="res://Player/Guillotine-07.gd" id="1_2uy8n"]
[ext_resource type="Texture2D" uid="uid://dfdrywdfoturh" path="res://Assets/guillotine-wings-draft.png" id="4_5julm"]
[ext_resource type="Texture2D" uid="uid://b4t8skqxmo2rg" path="res://Assets/guillotine-body-draft.png" id="5_aulbw"]
[ext_resource type="Texture2D" uid="uid://dwry8ylxb6cxu" path="res://Assets/guillotine-head-draft.png" id="6_8bemu"]
[ext_resource type="Texture2D" uid="uid://t6oqb4tbi8w5" path="res://Assets/guillotine-blade-draft.png" id="7_p2rxt"]
[ext_resource type="Resource" path="res://Projectile/PlayerProjectiles/MinigunShot.tres" id="8_002k6"]
[ext_resource type="Texture2D" uid="uid://b4jiulrlpn05t" path="res://Assets/guillotine_minigun_draft.png" id="8_7dn3a"]
[ext_resource type="PackedScene" uid="uid://bpktjxlghct6o" path="res://Projectile/ProjectileManager.tscn" id="9_w0jcr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d22ns"]
radius = 180.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6sx8"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2cho"]
size = Vector2(196, 384)

[node name="Guillotine-07" type="CharacterBody2D" node_paths=PackedStringArray("PlayerCamera")]
script = ExtResource("1_2uy8n")
PlayerCamera = NodePath("")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_d22ns")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_v6sx8")
debug_color = Color(0.235294, 0.627451, 0.301961, 0.419608)

[node name="RushTimer" type="Timer" parent="."]
one_shot = true

[node name="SlashTimer" type="Timer" parent="."]

[node name="ThrustTimer" type="Timer" parent="."]

[node name="ExecutionTimer" type="Timer" parent="."]

[node name="AuxillaryCooldown" type="Timer" parent="."]
process_callback = 0

[node name="FullBody" type="Node2D" parent="."]

[node name="Wings" type="Sprite2D" parent="FullBody"]
texture = ExtResource("4_5julm")

[node name="Body" type="Sprite2D" parent="FullBody"]
z_index = 2
texture = ExtResource("5_aulbw")

[node name="Head" type="Sprite2D" parent="FullBody"]
z_index = 3
texture = ExtResource("6_8bemu")

[node name="Blade" type="Area2D" parent="."]
z_index = 1
position = Vector2(0, 320)
scale = Vector2(1.2, 1.2)
collision_layer = 0
collision_mask = 0

[node name="BladeVisual" type="Sprite2D" parent="Blade"]
rotation = 0.785398
texture = ExtResource("7_p2rxt")

[node name="BladeCollider" type="CollisionShape2D" parent="Blade"]
shape = SubResource("RectangleShape2D_o2cho")
debug_color = Color(0.921569, 0.247059, 0.337255, 0.419608)

[node name="AuxillaryAnchor" type="Node2D" parent="."]
z_index = 1
position = Vector2(0, -64)

[node name="GunVisual" type="Sprite2D" parent="AuxillaryAnchor"]
texture = ExtResource("8_7dn3a")

[node name="CannonPoint" type="Marker2D" parent="AuxillaryAnchor"]
position = Vector2(96, -8)

[node name="PlayerGun" parent="AuxillaryAnchor" instance=ExtResource("9_w0jcr")]
position = Vector2(-64, 64)
ShotData = ExtResource("8_002k6")
MaxPool = 128
